feat(build): 集成Koin依赖注入框架并升级构建配置
- 将koin-convention插件应用于suno模块以支持依赖注入
- 升级Gradle插件基线Java版本从8到17
- 更新KSP版本从2.21-2.0.4到2.3.2-Beta1
- 修改文件日志策略为Koin单例管理并调整缓存目录名称
- 在settings.gradle.kts中添加新的模块引用
- 移除音乐设计工具中的废弃预览方法并优化测试代码
- 更新项目版本生成逻辑启用动态版本号
- 删除过时的dotfiles CLI启动脚本
- 修改RustFS模块的依赖声明方式

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -25,6 +25,7 @@ jdk = "8"
 
 kotlin = "2.2.21"
 ksp = "2.2.21-2.0.4"
+koin-compiler = "2.3.2-Beta1"
 com-diffplug-spotless = "8.0.0"
 
 # 本项目安卓应用版本定义
@@ -283,7 +284,7 @@ junit-jupiter = { group = "org.junit.jupiter", name = "junit-jupiter", version.r
 kingbase8 = { group = "cn.com.kingbase", name = "kingbase8", version.ref = "kingbase8" }
 koin-annotations = { group = "io.insert-koin", name = "koin-annotations", version.ref = "io-insert-koin-koin-annotations" }
 koin-core = { group = "io.insert-koin", name = "koin-core", version.ref = "io-insert-koin-koin-core" }
-koin-ksp-compiler = { group = "io.insert-koin", name = "koin-ksp-compiler", version.ref = "ksp" }
+koin-ksp-compiler = { group = "io.insert-koin", name = "koin-ksp-compiler", version.ref = "koin-compiler" }
 kotest-assertions-core = { group = "io.kotest", name = "kotest-assertions-core", version.ref = "kotest" }
 kotest-property = { group = "io.kotest", name = "kotest-property", version.ref = "kotest" }
 kotest-runner-junit5 = { group = "io.kotest", name = "kotest-runner-junit5", version.ref = "kotest" }
