chore(test): 移除多个模块中的测试文件和构建配置清理
- 删除 weather 模块中的 CityRepositoryTest 和 CityServiceTest 测试类
- 删除 tyc-hw 模块中的 CompanySearchApiTest 测试类
- 删除 maven 模块中的 GradleDependencyParserTest 测试类
- 清理 jimmer-ext-lowquery 模块的构建配置文件尾部空行
- 清理 common-models 模块的构建配置文件尾部空行
- 移除多个 network-call 模块中重复的 GradleDependencyParserTest 测试文件

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -223,14 +223,14 @@ software-amazon-awssdk-s3 = "2.29.16"
 swagger = "1.6.12"
 tidb = "0.1.0"
 validation = "2.0.1.Final"
-
+addzero-jimmer-model-lowquery-version = "2025.09.29"
 
 
 [libraries]
 addzero-entity2analysed-support = { group = "site.addzero", name = "addzero-entity2analysed-support", version.ref = "addzero" }
 addzero-entity2form-core = { group = "site.addzero", name = "addzero-entity2form-core", version.ref = "addzero" }
 addzero-ioc-core = { group = "site.addzero", name = "addzero-ioc-core", version.ref = "addzero" }
-addzero-jimmer-model-lowquery = { group = "site.addzero", name = "addzero-jimmer-model-lowquery", version.ref = "addzero" }
+addzero-jimmer-model-lowquery = { group = "site.addzero", name = "addzero-jimmer-model-lowquery", version.ref = "addzero-jimmer-model-lowquery-version" }
 addzero-kcp-annotations = { group = "site.addzero", name = "addzero-kcp-annotations", version.ref = "addzero" }
 addzero-ksp-dsl-builder-core = { group = "site.addzero", name = "addzero-ksp-dsl-builder-core", version.ref = "addzero" }
 addzero-ksp-easycode = { group = "site.addzero", name = "addzero-ksp-easycode", version.ref = "addzero" }
