--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -69,7 +69,7 @@ guice = "4.2.3"
 h2 = "2.3.232"
 hivemqMqttClientVersion = "1.3.9"
 hutool = "+"
-hutoolAll = "5.8.40"
+hutoolAll = "5.8.43"
 io-insert-koin-koin-annotations = "2.3.2-Beta1"
 io-insert-koin-koin-core = "4.2.0-beta2"
 jackson = "2.18.2"
@@ -96,7 +96,8 @@ kotest = "5.7.2"
 #ksp = "2.2.0-2.0.2"
 #kotlin = "2.1.20"
 #ksp = "2.1.20+"
-kotlin = "2.2.21"
+kotlin = "2.3.20-Beta1"
+ksp = "2.3.4"
 kotlinpoetKsp = "2.2.0"
 kotlinx = "1.10.0-RC"
 # CLI 版本
@@ -104,7 +105,6 @@ kotlinx-cli = "0.3.6"
 kotlinx-coroutines = "1.10.2"
 kotlinx-serialization = "1.9.0"
 kotlinxDatetime = "0.7.1-0.6.x-compat"
-ksp = "2.2.21-2.0.4"
 ktor = "3.2.3"
 ktorfitGradlePlugin = "2.6.4"
 logback = "1.5.18"
