--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,13 +1,13 @@
 [versions]
 addzero = "0.0.674"
 addzero-jimmer-model-lowquery-version = "2025.09.29"
-# 大发版 稳定版本
 #addzero-lib = "2025.09.29"
 addzero-lib = "0.0.672"
 addzero-lib1 = "0.0.673"
 addzero-lib674 = "0.0.674"
-#addzeroGradleToolVersion ="0.0.652"
-addzeroGradleToolVersion = "+"
+addzeroGradleToolVersion ="2025.09.24"
+#implementation("site.addzero:addzero-gradle-tool:2025.09.24")
+#addzeroGradleToolVersion = "+"
 addzeroJvmVersion = "0.0.657"
 addzeroKspBuddyVersion = "2025.09.26"
 addzeroPublishBuddyVersion = "2025.09.26"
