feat(kotlin-script): 添加 Kotlin 脚本模板工具支持
- 新增 KotlinScriptTemplateUtil，支持模板字符串填充与 Kotlin 脚本执行
- 实现 KotlinScriptTemplateCtx，支持嵌套元数据访问
- 添加丰富的单元测试覆盖模板填充与脚本执行逻辑
- 添加 kotlin-script 模块，声明脚本相关依赖库及测试依赖
- 优化项目目录结构和构建配置，清理无用代码
- 移除部分过时或无用的黑名单目录扫描功能
- 新增 KSP 相关插件及任务依赖管理，提升多模块构建兼容性
- 完成 Excel 相关功能测试代码，完善数据过滤与写出示例

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,4 +1,6 @@
 [versions]
+kotlin = "2.3.20-Beta1"
+ksp = "2.3.4"
 addzero = "0.0.674"
 addzero-jimmer-model-lowquery-version = "2025.09.29"
 #addzero-lib = "2025.09.29"
@@ -78,6 +80,7 @@ javax-annotation-javax-annotation-api = "1.3.2"
 javax-servlet-javax-servlet-api = "4.0.1"
 jcraft = "0.1.55"
 jdk = "8"
+jdkHigh = "25"
 jimmer = "0.9.110"
 json2kotlin-dataclass = "2025.11.33"
 jsoup = "1.15.3"
@@ -96,8 +99,6 @@ kotest = "5.7.2"
 #ksp = "2.2.0-2.0.2"
 #kotlin = "2.1.20"
 #ksp = "2.1.20+"
-kotlin = "2.3.20-Beta1"
-ksp = "2.3.4"
 kotlinpoetKsp = "2.2.0"
 kotlinx = "1.10.0-RC"
 # CLI 版本
